fix: 修复样式 hexo next 主题下被覆盖问题

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -70,24 +70,24 @@
     justify-content: flex-start;
     margin-bottom: 4px;
 }
-.uq-c-comment-author .avatar,
-.uq-c-comment-author .name,
-.uq-c-comment-author .time {
+.uq-c-comment-author .uq-c-comment-author-avatar,
+.uq-c-comment-author .uq-c-comment-author-name,
+.uq-c-comment-author .uq-c-comment-author-time {
     padding-right: 8px;
 }
-.uq-c-comment-author .avatar img {
+.uq-c-comment-author .uq-c-comment-author-avatar img {
     width: 22px;
     height: 22px;
     border-radius: 50%;
 }
-.uq-c-comment-author .name {
+.uq-c-comment-author .uq-c-comment-author-name {
     max-width: 120px;
     color: rgba(0, 0, 0, .45);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.uq-c-comment-author .time {
+.uq-c-comment-author .uq-c-comment-author-time {
     color: #ccc;
     font-size: 12px;
 }
@@ -110,24 +110,24 @@
     line-height: 20px;
 }
 
-.uq-c-comment-publish .header input {
+.uq-c-comment-publish .uq-c-comment-publish-header input {
     padding: 4px;
     color: rgba(0, 0, 0, .85);
     background: transparent;
     border: none;
 }
-.uq-c-comment-publish .header input:nth-child(1) {
+.uq-c-comment-publish .uq-c-comment-publish-header input:nth-child(1) {
     width: 40%;
 }
-.uq-c-comment-publish .header input:nth-child(2) {
+.uq-c-comment-publish .uq-c-comment-publish-header input:nth-child(2) {
     width: 60%;
 }
 
-.uq-c-comment-publish .editor {
+.uq-c-comment-publish .uq-c-comment-publish-editor {
     padding: 4px;
     border-top: 1px dashed #1890ff;
 }
-.uq-c-comment-publish .editor textarea {
+.uq-c-comment-publish .uq-c-comment-publish-editor textarea {
     width: 100%;
     height: 40px;
     padding: 0;
@@ -136,20 +136,20 @@
     border: none;
 }
 
-.uq-c-comment-publish .footer {
+.uq-c-comment-publish .uq-c-comment-publish-footer {
     display: flex;
     justify-content: space-between;
     border-top: 1px dashed #1890ff;
 }
-.uq-c-comment-publish .footer .tips,
-.uq-c-comment-publish .footer .submit {
+.uq-c-comment-publish .uq-c-comment-publish-footer .tips,
+.uq-c-comment-publish .uq-c-comment-publish-footer .submit {
     padding: 4px;
     color: #1890ff;
 }
-.uq-c-comment-publish .footer .tips {
+.uq-c-comment-publish .uq-c-comment-publish-footer .tips {
     color: #ff7875;
 }
-.uq-c-comment-publish .footer .submit {
+.uq-c-comment-publish .uq-c-comment-publish-footer .submit {
     background: transparent;
     border: none;
     cursor: pointer;
@@ -164,11 +164,11 @@
     transform: translate(-50%);
     cursor: pointer;
 }
-.uq-c-point.large {
+.uq-c-point-large {
     width: 10px;
     height: 10px;
 }
-.uq-c-point.small {
+.uq-c-point-small {
     width: 6px;
     height: 6px;
 }
